--- a/templates/home.html
+++ b/templates/home.html
@@ -13,9 +13,9 @@
         <div class="carousel-item active">
           <img src="/static/images/classroom.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption font1">
-            <h1 class="text-center">Swift <span class="text-danger">U</span>nder<span class="text-danger">G</span>rads
+            <h1 class="text-center title">Swift <span class="text-danger">U</span>nder<span class="text-danger">G</span>rads
             </h1>
-            <p>Your guide to MHT-CET</p>
+            <p class="subtitle">Your guide to MHT-CET</p>
           </div>
         </div>
 
@@ -70,7 +70,7 @@
         <div class="card border-0 my-3 p-4 position-relative services" style="min-height:330px; background-color: #f4fcfc; border-radius:10px;">
           <div class="rounded-image rounded-circle d-flex justify-content-center my-3" style="background-color: {{ service.color }};"><img class="mx-auto d-block" src="/static/images/{{ service.image }}" style="object-fit: contain;" height="50" width="50"></div>
           <h6 style="font-size: 25px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 500;">{{ service.name }}</h6>
-          <p>{{ service.description }}</p>
+          <p style="text-align: left;">{{ service.description }}</p>
         </div>
       </div>
       {% endfor %}
@@ -91,8 +91,8 @@
           <p class="text-dark card-text mx-3">{{ card.description }}</p>
 
           <div class="row ml-2">
-            <div class="col-lg-2"><img class="rounded-circle mt-5 mb-5" src="/static/images/{{ card.photo }}" width="50"
-                height="50" /></div>
+            <div class="col-lg-2 testimonial-photo"><img class="rounded-circle mt-5 mb-5" src="/static/images/{{ card.photo }}" width="65"
+                height="65" /></div>
             <div class="col-lg-10 text-left">
               <h5 class="mt-5 mb-2">{{ card.name }}</h6>
                 <p class="text-dark txt-clg">{{ card.college }}</p>
