--- a/templates/mumbai.html
+++ b/templates/mumbai.html
@@ -6,7 +6,7 @@
 <div>
   <div class="container-fluid bg-counselling">
     <div class="jumbotron bg-transparent">
-      <h1 align="center">Mumbai Counselling</h1>
+      <h1 align="center" class="counsel-text">Mumbai Counselling</h1>
     </div>
   </div>
 
