--- a/templates/home.html
+++ b/templates/home.html
@@ -24,10 +24,10 @@
           <img src="/static/images/{{ clg.img }}" class="d-block college-image w-100" alt="image">
           <div class="carousel-caption">
             <h4>
-              <div class="card text py-2 border-0 text-dark bg-warning">{{ clg.institute }}</div>
+              <div class="card text py-2 border-0 college-name text-dark bg-warning">{{ clg.institute }}</div>
             </h4><br>
             <p class="caption">
-            <div class="card text py-2 border-0 text-dark bg-warning">{{ clg.caption }}</div>
+            <div class="card text py-2 border-0 college-desc text-dark bg-warning">{{ clg.caption }}</div>
             </p>
           </div>
         </div>
