--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -8,25 +8,33 @@
       background: black;
     }
   
-    .title, .number, {
+    .title, .number {
       font-size: 40px;
     }
 
-    .subtitle, .stats,{
+    .subtitle{
       font-size: 30px;
     }
 
-    .bg4 {
-      padding-top: 40%;
+    .stats{
+      font-size: 20px;
+    }
+
+    .college-desc {
+      font-size: 15px;
+    }
+
+    .college-name {
+      font-size: 25px;
+    }
+
+    .bg4, .bg7 {
+      padding-top: 50%;
     }
 
     .counsel-text {
-      font-size: 60px;
-      padding-top: 30%;
-    }
-    
-    .bg7 {
-      padding-top: 30%;
+      font-size: 45px;
+      padding-top: 50%;
     }
 
     .navbar-brand, .navbar-nav.ml-auto li a {
