--- a/templates/pharmnotes.html
+++ b/templates/pharmnotes.html
@@ -18,7 +18,7 @@
 
         {% for pharm in pharmacy %}
         <div class="col-lg-4">
-          <div class="card mb-5 shadow">
+          <div class="card mb-5 shadow" style="min-height: 600px;">
             <img class="card-img-top" height="450" src="/static/images/{{ pharm.image }}" alt="Card image" />
             <div class="card-body">
               <h5 class="card-title">{{ pharm.title }}</h5>
@@ -34,7 +34,7 @@
     <hr />
   
     <div>
-      <h4>JOIN OUR TELEGRAM GROUP FOR MORE PHARMACY NOTES</h4>
+      <h6 class="text-dark text-center">JOIN OUR TELEGRAM GROUP FOR MORE PHARMACY NOTES</h6>
       <div class="socials mb-5">
         <a href="https://www.github.com/Sharath1036/"><img alt="image" class="icons" src="/static/images/telegram.webp"/></a>
       </div>
