--- a/static/css/main.css
+++ b/static/css/main.css
@@ -294,10 +294,15 @@ h4 {
 
 .services {
   border-radius: 30px;
+  min-height: 330px;
 }
 
 .rounded-image {
   height: 75px;
   width: 75px;
   align-items: center;
+}
+
+.h6 {
+  font-size: 35px;
 }
