--- a/templates/about.html
+++ b/templates/about.html
@@ -19,16 +19,18 @@
   <br />
 
   <h3 class="mb-5 arial">MEET OUR TEAM</h3>
-  <div class="container-fluid">
-   <div class="row">
 
+  <div class="container-fluid">
+    <div class="row">
       {% for about in about %}
-      <div class="col-lg-4">
+      <div class="col-lg-4 my-2">
+        
         <div class="card cards mb-4 bg-transparent" style="border: 2px solid #f4fcfc; border-radius: 15px; box-shadow: 4px 4px 2px 2px lightblue; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600;">
-        <img alt="{{ about.name }}" class="mx-auto d-flex pt-4" src="static/images/{{ about.image }}" width="250" height="250" />
-        <br />
-        <h6 style="font-size: 35px; text-align: center;">{{ about.name }}</h6>
+          <img alt="{{ about.name }}" class="mx-auto d-flex pt-4" src="static/images/{{ about.image }}" width="250" height="250" />
+          <br />
+        <div class="h6" style="text-align: center;">{{ about.name }}</div>
         <p class="pb-2" style="font-size: 20px; font-weight: 100; text-align: center;">{{ about.role }}</p>
+
         <div class="text-center">
           {% if about.linkedin %}
           <div class="socials"><a href="https://linkedin.com/in/{{ about.linkedin }}"><img alt="image" class="icons" src="static/images/linkedin.png" /></a></div>
@@ -45,12 +47,12 @@
           {% endif %}
           <br /><br />
         </div>
-      </div>
-      </div>
+        </div>
+        
       </div>
       {% endfor %}
-    </div> 
-
+    </div>
   </div>
 </div>
+
 {% endblock body %}
