--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
 
       {% for service in services%}
       <div class="col-lg-4 text-lg-left">
-        <div class="card border-0 my-3 p-4 position-relative services" style="min-height:330px; background-color: #f4fcfc; border-radius:10px;">
+        <div class="card border-0 my-3 p-4 position-relative services" style="background-color: #f4fcfc; border-radius:10px;">
           <div class="rounded-image rounded-circle d-flex justify-content-center my-3" style="background-color: {{ service.color }};"><img class="mx-auto d-block" src="/static/images/{{ service.image }}" style="object-fit: contain;" height="50" width="50"></div>
           <h6 style="font-size: 25px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 500;">{{ service.name }}</h6>
           <p style="text-align: left;">{{ service.description }}</p>
