modified desktop responsiveness

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -116,6 +116,10 @@
       min-height: 380px;
     }
 
+    .card {
+      min-width: 350px;
+    }
+
     h6 {
       text-align: left;
       font-size: 23px;
