--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -120,13 +120,12 @@
       text-align: left;
       font-size: 23px;
     }
-
-    .h6 {
-      font-size: 35px;
-    }
   
+    .service-col {
+      width: 50%;
+    } 
+
     .col-lg-4 {
-      width: 45%;
       margin: auto;
       display: block;
     }
