--- a/templates/home.html
+++ b/templates/home.html
@@ -90,10 +90,10 @@
           <img class="mt-4" src="static/images/double-quote-bottom.png" width="5%" height="5%" />
           <p class="text-dark card-text mx-3">{{ card.description }}</p>
 
-          <div class="row ml-2">
-            <div class="col-lg-2 testimonial-photo"><img class="rounded-circle mt-5 mb-5" src="/static/images/{{ card.photo }}" width="65"
+          <div class="d-flex pl-2 flex-row">
+            <div class="d-flex testimonial-photo"><img class="rounded-circle mt-5 mb-5" src="/static/images/{{ card.photo }}" width="65"
                 height="65" /></div>
-            <div class="col-lg-10 text-left">
+            <div class="col-lg-11 text-left">
               <h5 class="mt-5 mb-2">{{ card.name }}</h6>
                 <p class="text-dark txt-clg">{{ card.college }}</p>
             </div>
